# Speculative-Decoding-A-KV-Cache-Optimized-Implementation-using-PyTorch-Hugging-Face

./: LICENSE  README.md  pyproject.toml
experiments/: run_experiments.py
results_kvcache/: results.csv
specdec/: metrics.py  sampling.py  utils.py
specdec/baseline/: encoder_decoder_baseline.py
specdec/speculative/: batching.py  encoder_decoder.py
